--- a/src/App.css
+++ b/src/App.css
@@ -129,7 +129,7 @@ table {
   color: white;
   --background: #ffffff;
   --link-color: #ffffff3e;
-  --btn-color: #03060e;
+  --btn-color: #0d1324;
   font-size: 24px;
   font-family: "IBM Plex Sans Devanagari", sans-serif;
 }
@@ -249,6 +249,22 @@ main {
   filter: grayscale(100);
 }
 
+.placeholder {
+  background-color: var(--btn-color);
+  aspect-ratio: 16 / 9;
+}
+
+.placeholder > h2 {
+  font-weight: 700;
+  position: relative;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  font-size: 2rem;
+  top: 40%;
+  opacity: 0.1;
+}
+
 .project:hover {
   scale: 1.03;
   filter: brightness(100%);
@@ -288,7 +304,9 @@ main {
 
 .stack-item:hover {
   transform: translateY(-0.1rem);
-  scale: 1.1;
+  scale: 1.05;
+  filter: grayscale(0);
+  opacity: 70%;
 }
 
 @media (orientation: portrait) {
@@ -345,10 +363,6 @@ main {
     height: 100%;
     width: 100%;
   }
-  .project-container {
-    overflow: visible;
-    width: 94vw;
-  }
   .stack-container {
     margin: 0;
     text-align: center;
@@ -365,6 +379,10 @@ main {
     height: 4vw;
   }
 
+  .project-container {
+    overflow: visible;
+    width: 94vw;
+  }
   .project {
     filter: brightness(100%);
     filter: grayscale(0);
